# esp32-senior-home-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dashboard.html
main/: 10_ld2450.c  10_ld2450.h  CMakeLists.txt  app_main.c  bsp.c  bsp.h  sensor_data_mgr.c  sensor_data_mgr.h  task_app_btn.c  task_app_btn.h  task_app_cmd.c  task_app_cmd.h  task_app_mqtt.c  task_app_mqtt.h  task_app_radar.c  task_app_radar.h  task_app_sensor.c  task_app_sensor.h  task_app_wifi_manage.c  task_app_wifi_manage.h  task_monitor.c  task_monitor.h
s3_link_device/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
s3_link_device/components/BEEP/: CMakeLists.txt
s3_link_device/components/KEY/: CMakeLists.txt
s3_link_device/components/LCD/: CMakeLists.txt  lcd.c  lcd.h
s3_link_device/components/LED/: CMakeLists.txt
s3_link_device/components/SPI/: CMakeLists.txt
s3_link_device/main/: CMakeLists.txt  app_main.c  s3_buttons.c  s3_buttons.h  s3_display.c  s3_display.h  s3_mqtt.c  s3_mqtt.h  s3_wifi.c  s3_wifi.h
