idf_component_register(SRCS
    "app_main.c"
    "bsp.c"
    "task_monitor.c"
    "sensor_data_mgr.c"
    "task_app_wifi_manage.c"
    "task_app_mqtt.c"
    "task_app_cmd.c"
    "task_app_sensor.c"
    "task_app_btn.c"
    "task_app_radar.c"
    "10_ld2450.c"
    "02_led.c"
    "02_button.c"
    "03_gy30.c"
    "09_dht11.c"
    "09_mics5524.c"
    INCLUDE_DIRS "."
    REQUIRES driver esp_wifi esp_event esp_netif nvs_flash mqtt esp_timer)
